--- a/SubsetExportTool/download_report.Rmd
+++ b/SubsetExportTool/download_report.Rmd
@@ -4,9 +4,18 @@ author: "Webster University"
 date: "2/4/2018"
 output: pdf_document
 ---
-
-```{r}
+Table 1:
+```{r echo=FALSE}
 source("functions.R")
-x <- Q1table(datasetInput())
-xtable::xtable(x[[1]])
+knitr::kable(Table1(datasetInput()))
+```
+
+Table 2:
+```{r echo=FALSE}
+knitr::kable(TableQ(datasetInput(), c("Q101", "Q102")))
+```
+
+Table 3:
+```{r echo=FALSE}
+knitr::kable(TableQ(datasetInput(), paste0("Q", 83:90)))
 ```
