Working on the aesthetics of the app and the report.

--- a/SubsetExportTool/download_report.Rmd
+++ b/SubsetExportTool/download_report.Rmd
@@ -32,7 +32,7 @@ knitr::kable(TableQ(datasetInput(), paste0("Q", 43:48)))
 
 Table 6:
 ```{r echo=FALSE}
-knitr::kable(TableQ(datasetInput(), paste0("Q", 74:82)))
+knitr::kable(Table6(datasetInput(), paste0("Q", 74:82)))
 ```
 
 Table 7:
@@ -48,24 +48,4 @@ knitr::kable(TableQ(datasetInput(), paste0("Q", 105)))
 Table 9:
 ```{r echo=FALSE}
 knitr::kable(TableQ(datasetInput(), paste0("Q", 108:109)))
-```
-
-Table 10:
-```{r echo=FALSE}
-knitr::kable(TableQ(datasetInput(), paste0("Q", 110:113)))
-```
-
-Table 11:
-```{r echo=FALSE}
-knitr::kable(TableQ(datasetInput(), paste0("Q", 114:117)))
-```
-
-Table 12:
-```{r echo=FALSE}
-knitr::kable(TableQ(datasetInput(), paste0("Q", 122)))
-```
-
-Table 13:
-```{r echo=FALSE}
-knitr::kable(TableQ(datasetInput(), paste0("Q", 118)))
 ```
