--- a/SubsetExportTool/download_report.Rmd
+++ b/SubsetExportTool/download_report.Rmd
@@ -42,7 +42,7 @@ cap <- "Overall Satisfaction with Webster"
 cols <- c("Please indicate your level of agreement with the following:", 
           "Overall Avg.", "GRAD Avg.", "UNGD Avg.")
 foot <- "Strongly Agree (4); Mostly Agree (3); Mostly Disagree (2); Strongly Disagree (1)"
-TableQ(datasetInput(), c("Q101", "Q102")) %>%
+TableA(datasetInput(), c("Q101", "Q102")) %>%
       kable(digits = 2,
             col.names = cols,
             caption = cap,
@@ -60,7 +60,7 @@ cap <- "Mission Outcomes"
 cols <- c("My Webster experience has enhanced my ability to:", 
           "Overall Avg.", "GRAD Avg.", "UNGD Avg.")
 foot <- "Strongly Agree (4); Mostly Agree (3); Mostly Disagree (2); Strongly Disagree (1)"
-TableQ(datasetInput(), paste0("Q", 83:90)) %>%
+TableA(datasetInput(), paste0("Q", 83:90)) %>%
       kable(digits = 2,
             col.names = cols,
             caption = cap,
@@ -78,7 +78,7 @@ cap <- "Learning Environment"
 cols <- c("During my Webster experience:", 
           "Overall Avg.", "GRAD Avg.", "UNGD Avg.")
 foot <- "Strongly Agree (4); Mostly Agree (3); Mostly Disagree (2); Strongly Disagree (1)"
-TableQ(datasetInput(), paste0("Q", 71:73)) %>%
+TableA(datasetInput(), paste0("Q", 71:73)) %>%
       kable(digits = 2,
             col.names = cols,
             caption = cap,
@@ -96,7 +96,7 @@ cap <- "Learning Environment"
 cols <- c("In my program of study:", 
           "Overall Avg.", "GRAD Avg.", "UNGD Avg.")
 foot <- "Strongly Agree (4); Mostly Agree (3); Mostly Disagree (2); Strongly Disagree (1)"
-TableQ(datasetInput(), paste0("Q", 43:48)) %>%
+TableA(datasetInput(), paste0("Q", 43:48)) %>%
       kable(digits = 2,
             col.names = cols,
             caption = cap,
@@ -156,7 +156,7 @@ cols <- c("What is your primary activity?",
           "# of GRAD respondents", "% of GRAD Total",
           "# of UNDG Respondents", "% of UNDG Total")
 
-Table8(datasetInput(), paste0("Q", 19)) %>%
+TableB(datasetInput(), paste0("Q", 19)) %>%
       kable(digits = 2,
             col.names = cols,
             caption = cap,
@@ -174,7 +174,7 @@ cols <- c("Please indicate your level of agreement with the following: ",
           "Overall Avg.", "GRAD Avg.", "UNGD Avg.")
 foot1 <- "Strongly Agree (4); Mostly Agree (3); Mostly Disagree (2); Strongly Disagree (1)"
 foot2 <- "Averages are based on respondent who indicated they were employed full- or part-time as their primary activity."
-TableQ(datasetInput(), paste0("Q", 108:109)) %>%
+TableA(datasetInput(), paste0("Q", 108:109)) %>%
       kable(digits = 2,
             col.names = cols,
             caption = cap,
@@ -191,13 +191,13 @@ TableQ(datasetInput(), paste0("Q", 108:109)) %>%
 ```
 
 ```{r echo=FALSE}
-cap <- "Career Outcomes"
-cols <- c("What is your primary activity?", 
+cap <- "Career Outcomes - Employment"
+cols <- c("In what industry do you currently work?", 
           "# of Overall Respondents", "% of Overall Total",
           "# of GRAD respondents", "% of GRAD Total",
           "# of UNDG Respondents", "% of UNDG Total")
 
-Table8(datasetInput(), paste0("Q", 111)) %>%
+TableB(datasetInput(), paste0("Q", 111)) %>%
       kable(digits = 2,
             col.names = cols,
             caption = cap,
@@ -208,13 +208,13 @@ Table8(datasetInput(), paste0("Q", 111)) %>%
 ```
 
 ```{r echo=FALSE}
-cap <- "Career Outcomes"
-cols <- c("What is your primary activity?", 
+cap <- "Career Outcomes - Employment"
+cols <- c("Which level of the following best describes your current position?", 
           "# of Overall Respondents", "% of Overall Total",
           "# of GRAD respondents", "% of GRAD Total",
           "# of UNDG Respondents", "% of UNDG Total")
 
-Table8(datasetInput(), paste0("Q", 115)) %>%
+TableB(datasetInput(), paste0("Q", 115)) %>%
       kable(digits = 2,
             col.names = cols,
             caption = cap,
