--- a/SubsetExportTool/download_report.Rmd
+++ b/SubsetExportTool/download_report.Rmd
@@ -1,8 +1,6 @@
 ---
-image: ![](http://www.webster.edu/images/globalmarketingcommunications/logo-downloads/logo_color_pms_280_136.jpg)
 title: "Outcomes Report"
-author: "Webster University"
-date: "`r Sys.Date()`"
+date: "`r paste('Generated on', Sys.Date())`"
 output: pdf_document
 header-includes:
   - \usepackage{booktabs}
@@ -17,7 +15,18 @@ header-includes:
   - \usepackage{tabu}
   - \usepackage{threeparttable}
   - \usepackage[normalem]{ulem}
+  - \usepackage{titling}
+  
+  - \pretitle{\begin{center}\LARGE\includegraphics[width=12cm]{www/401px-Webster_University_Logo.svg.png}\\[\bigskipamount]}
+  - \posttitle{\end{center}}
 ---
+##Custom report using:
+* College(s): `r input$school`
+* Department(s): `r input$dept`
+* Major(s): `r input$major`
+* Campus(es): `r input$campus`
+
+
 ```{r echo=FALSE}
 options(knitr.table.format = "latex")
 options(kableExtra.latex.load_packages = TRUE)
@@ -25,26 +34,25 @@ library(knitr)
 library(kableExtra)
 source("functions.R")
 ```
+\newpage
 
 ```{r echo=FALSE}
 cap <- "Outcomes Survey Response Rates by Program Level"
-cols <- c("Program Level", "Total Graduates", "Total Respondents", "Response Rate")
+
 Table1(datasetInput()) %>%
       kable(digits = 2,
             caption = cap,
-            col.names = cols) %>%
-      kable_styling(full_width = TRUE) %>%
+            booktabs = TRUE) %>%
+      kable_styling(latex_options = "striped", full_width = TRUE) %>%
       row_spec(0, bold = TRUE)
 ```
 
 ```{r echo=FALSE}
 cap <- "Overall Satisfaction with Webster"
-cols <- c("Please indicate your level of agreement with the following:", 
-          "Overall Avg.", "GRAD Avg.", "UNGD Avg.")
 foot <- "Strongly Agree (4); Mostly Agree (3); Mostly Disagree (2); Strongly Disagree (1)"
+
 TableA(datasetInput(), c("Q101", "Q102")) %>%
       kable(digits = 2,
-            col.names = cols,
             caption = cap,
             booktabs = TRUE) %>%
       kable_styling(latex_options = "striped", full_width = TRUE) %>%
@@ -57,12 +65,10 @@ TableA(datasetInput(), c("Q101", "Q102")) %>%
 
 ```{r echo=FALSE}
 cap <- "Mission Outcomes"
-cols <- c("My Webster experience has enhanced my ability to:", 
-          "Overall Avg.", "GRAD Avg.", "UNGD Avg.")
 foot <- "Strongly Agree (4); Mostly Agree (3); Mostly Disagree (2); Strongly Disagree (1)"
+
 TableA(datasetInput(), paste0("Q", 83:90)) %>%
       kable(digits = 2,
-            col.names = cols,
             caption = cap,
             booktabs = TRUE) %>%
       kable_styling(latex_options = "striped", full_width = TRUE) %>%
@@ -75,12 +81,10 @@ TableA(datasetInput(), paste0("Q", 83:90)) %>%
 
 ```{r echo=FALSE}
 cap <- "Learning Environment"
-cols <- c("During my Webster experience:", 
-          "Overall Avg.", "GRAD Avg.", "UNGD Avg.")
 foot <- "Strongly Agree (4); Mostly Agree (3); Mostly Disagree (2); Strongly Disagree (1)"
+
 TableA(datasetInput(), paste0("Q", 71:73)) %>%
       kable(digits = 2,
-            col.names = cols,
             caption = cap,
             booktabs = TRUE) %>%
       kable_styling(latex_options = "striped", full_width = TRUE) %>%
@@ -93,12 +97,12 @@ TableA(datasetInput(), paste0("Q", 71:73)) %>%
 
 ```{r echo=FALSE}
 cap <- "Learning Environment"
-cols <- c("In my program of study:", 
-          "Overall Avg.", "GRAD Avg.", "UNGD Avg.")
+# cols <- c("In my program of study:", 
+#           "Overall Avg.", "GRAD Avg.", "UNGD Avg.")
 foot <- "Strongly Agree (4); Mostly Agree (3); Mostly Disagree (2); Strongly Disagree (1)"
+
 TableA(datasetInput(), paste0("Q", 43:48)) %>%
       kable(digits = 2,
-            col.names = cols,
             caption = cap,
             booktabs = TRUE) %>%
       kable_styling(latex_options = "striped", full_width = TRUE) %>%
@@ -111,13 +115,10 @@ TableA(datasetInput(), paste0("Q", 43:48)) %>%
 
 ```{r echo=FALSE}
 cap <- "Learning Environment (Undergraduates Only)"
-cols <- c("Please rate the impact of the following on your learning and/or development", 
-          "UNGD Avg.", "# of Respondents in Avg")
 foot <- "Very Significant (4); Somewhat Significant (3); Not Very Significant (2); Not At All Significant (1)"
 
 Table6(datasetInput(), paste0("Q", 74:82)) %>%
       kable(digits = 2,
-            col.names = cols,
             caption = cap,
             booktabs = TRUE) %>%
       kable_styling(latex_options = "striped", full_width = TRUE) %>%
@@ -130,58 +131,44 @@ Table6(datasetInput(), paste0("Q", 74:82)) %>%
 
 ```{r echo=FALSE}
 cap <- "Learning Environment"
-cols <- c("Please rate your level of satisfaction with the following Webster University processes", 
-        "Overall Avg.", "# of Respondents in Avg", "GRAD Avg.", "# of GRAD in Avg.", "UNGD Avg.", "# of UNDG in Avg.")
 foot <- "Very Satisfied (4); Mostly Satisfied (3); Mostly Dissatisfied (2); Very Dissatisfied (1)"
 
 Table7(datasetInput(), paste0("Q", 33:42)) %>%
       kable(digits = 2,
-            col.names = cols,
             caption = cap,
             booktabs = TRUE) %>%
       kable_styling(latex_options = "striped", full_width = TRUE) %>%
       row_spec(0, bold = TRUE) %>%
-      column_spec(1, "30em") %>% 
+      column_spec(1, "10em") %>% 
       footnote(foot,
                general_title = "Scale:",
                footnote_as_chunk = TRUE)
 ```
 
-
-
 ```{r echo=FALSE}
 cap <- "Career Outcomes"
-cols <- c("What is your primary activity?", 
-          "# of Overall Respondents", "% of Overall Total",
-          "# of GRAD respondents", "% of GRAD Total",
-          "# of UNDG Respondents", "% of UNDG Total")
 
 TableB(datasetInput(), paste0("Q", 19)) %>%
       kable(digits = 2,
-            col.names = cols,
             caption = cap,
             booktabs = TRUE) %>%
       kable_styling(latex_options = "striped", full_width = TRUE) %>%
       row_spec(0, bold = TRUE) %>%
-      column_spec(1, "30em")
+      column_spec(1, "10em") 
 ```
-
-
 
 ```{r echo=FALSE}
 cap <- "Career Outcomes - Employment"
-cols <- c("Please indicate your level of agreement with the following: ", 
-          "Overall Avg.", "GRAD Avg.", "UNGD Avg.")
 foot1 <- "Strongly Agree (4); Mostly Agree (3); Mostly Disagree (2); Strongly Disagree (1)"
-foot2 <- "Averages are based on respondent who indicated they were employed full- or part-time as their primary activity."
+foot2 <- "Averages based on responses where employed full- or part-time was primary activity."
+
 TableA(datasetInput(), paste0("Q", 108:109)) %>%
       kable(digits = 2,
-            col.names = cols,
             caption = cap,
             booktabs = TRUE) %>%
       kable_styling(latex_options = "striped", full_width = TRUE) %>%
       row_spec(0, bold = TRUE) %>%
-      column_spec(1, "30em") %>% 
+      column_spec(1, "20em") %>% 
       footnote(foot1,
                general_title = "Scale:",
                footnote_as_chunk = TRUE) %>%
@@ -192,34 +179,24 @@ TableA(datasetInput(), paste0("Q", 108:109)) %>%
 
 ```{r echo=FALSE}
 cap <- "Career Outcomes - Employment"
-cols <- c("In what industry do you currently work?", 
-          "# of Overall Respondents", "% of Overall Total",
-          "# of GRAD respondents", "% of GRAD Total",
-          "# of UNDG Respondents", "% of UNDG Total")
 
 TableB(datasetInput(), paste0("Q", 111)) %>%
       kable(digits = 2,
-            col.names = cols,
             caption = cap,
             booktabs = TRUE) %>%
       kable_styling(latex_options = "striped", full_width = TRUE) %>%
       row_spec(0, bold = TRUE) %>%
-      column_spec(1, "30em")
+      column_spec(1, "10em")
 ```
 
 ```{r echo=FALSE}
 cap <- "Career Outcomes - Employment"
-cols <- c("Which level of the following best describes your current position?", 
-          "# of Overall Respondents", "% of Overall Total",
-          "# of GRAD respondents", "% of GRAD Total",
-          "# of UNDG Respondents", "% of UNDG Total")
 
 TableB(datasetInput(), paste0("Q", 115)) %>%
       kable(digits = 2,
-            col.names = cols,
             caption = cap,
             booktabs = TRUE) %>%
       kable_styling(latex_options = "striped", full_width = TRUE) %>%
       row_spec(0, bold = TRUE) %>%
-      column_spec(1, "30em")
+      column_spec(1, "10em")
 ```
