--- a/SubsetExportTool/download_report.Rmd
+++ b/SubsetExportTool/download_report.Rmd
@@ -39,7 +39,7 @@ source("functions.R")
 ```{r echo=FALSE}
 cap <- "Outcomes Survey Response Rates by Program Level"
 
-Table1(datasetInput()) %>%
+Table1(datasetInput(), cnm) %>%
       kable(digits = 2,
             caption = cap,
             booktabs = TRUE) %>%
@@ -51,7 +51,7 @@ Table1(datasetInput()) %>%
 cap <- "Overall Satisfaction with Webster"
 foot <- "Strongly Agree (4); Mostly Agree (3); Mostly Disagree (2); Strongly Disagree (1)"
 
-TableA(datasetInput(), c("Q101", "Q102")) %>%
+TableA(datasetInput(), c("Q101", "Q102"), questionsIndex, cnm) %>%
       kable(digits = 2,
             caption = cap,
             booktabs = TRUE) %>%
@@ -67,7 +67,7 @@ TableA(datasetInput(), c("Q101", "Q102")) %>%
 cap <- "Mission Outcomes"
 foot <- "Strongly Agree (4); Mostly Agree (3); Mostly Disagree (2); Strongly Disagree (1)"
 
-TableA(datasetInput(), paste0("Q", 83:90)) %>%
+TableA(datasetInput(), paste0("Q", 83:90), questionsIndex, cnm) %>%
       kable(digits = 2,
             caption = cap,
             booktabs = TRUE) %>%
@@ -83,7 +83,7 @@ TableA(datasetInput(), paste0("Q", 83:90)) %>%
 cap <- "Learning Environment"
 foot <- "Strongly Agree (4); Mostly Agree (3); Mostly Disagree (2); Strongly Disagree (1)"
 
-TableA(datasetInput(), paste0("Q", 71:73)) %>%
+TableA(datasetInput(), paste0("Q", 71:73), questionsIndex, cnm) %>%
       kable(digits = 2,
             caption = cap,
             booktabs = TRUE) %>%
@@ -101,7 +101,7 @@ cap <- "Learning Environment"
 #           "Overall Avg.", "GRAD Avg.", "UNGD Avg.")
 foot <- "Strongly Agree (4); Mostly Agree (3); Mostly Disagree (2); Strongly Disagree (1)"
 
-TableA(datasetInput(), paste0("Q", 43:48)) %>%
+TableA(datasetInput(), paste0("Q", 43:48), questionsIndex, cnm) %>%
       kable(digits = 2,
             caption = cap,
             booktabs = TRUE) %>%
@@ -117,7 +117,7 @@ TableA(datasetInput(), paste0("Q", 43:48)) %>%
 cap <- "Learning Environment (Undergraduates Only)"
 foot <- "Very Significant (4); Somewhat Significant (3); Not Very Significant (2); Not At All Significant (1)"
 
-Table6(datasetInput(), paste0("Q", 74:82)) %>%
+Table6(datasetInput(), paste0("Q", 74:82), questionsIndex, cnm) %>%
       kable(digits = 2,
             caption = cap,
             booktabs = TRUE) %>%
@@ -133,7 +133,7 @@ Table6(datasetInput(), paste0("Q", 74:82)) %>%
 cap <- "Learning Environment"
 foot <- "Very Satisfied (4); Mostly Satisfied (3); Mostly Dissatisfied (2); Very Dissatisfied (1)"
 
-Table7(datasetInput(), paste0("Q", 33:42)) %>%
+Table7(datasetInput(), paste0("Q", 33:42), questionsIndex, cnm) %>%
       kable(digits = 2,
             caption = cap,
             booktabs = TRUE) %>%
@@ -148,7 +148,7 @@ Table7(datasetInput(), paste0("Q", 33:42)) %>%
 ```{r echo=FALSE}
 cap <- "Career Outcomes"
 
-TableB(datasetInput(), paste0("Q", 19)) %>%
+TableB(datasetInput(), paste0("Q", 19), questionsIndex, cnm) %>%
       kable(digits = 2,
             caption = cap,
             booktabs = TRUE) %>%
@@ -162,7 +162,7 @@ cap <- "Career Outcomes - Employment"
 foot1 <- "Strongly Agree (4); Mostly Agree (3); Mostly Disagree (2); Strongly Disagree (1)"
 foot2 <- "Averages based on responses where employed full- or part-time was primary activity."
 
-TableA(datasetInput(), paste0("Q", 108:109)) %>%
+TableA(datasetInput(), paste0("Q", 108:109), questionsIndex, cnm) %>%
       kable(digits = 2,
             caption = cap,
             booktabs = TRUE) %>%
@@ -180,7 +180,7 @@ TableA(datasetInput(), paste0("Q", 108:109)) %>%
 ```{r echo=FALSE}
 cap <- "Career Outcomes - Employment"
 
-TableB(datasetInput(), paste0("Q", 111)) %>%
+TableB(datasetInput(), paste0("Q", 111), questionsIndex, cnm) %>%
       kable(digits = 2,
             caption = cap,
             booktabs = TRUE) %>%
@@ -192,7 +192,7 @@ TableB(datasetInput(), paste0("Q", 111)) %>%
 ```{r echo=FALSE}
 cap <- "Career Outcomes - Employment"
 
-TableB(datasetInput(), paste0("Q", 115)) %>%
+TableB(datasetInput(), paste0("Q", 115), questionsIndex, cnm) %>%
       kable(digits = 2,
             caption = cap,
             booktabs = TRUE) %>%
